# snake3D

./: .env  .gitignore  CMakeLists.txt  Makefile  README.md  app_wasm.data  hello.html  main.cpp  page.html  page.js  page.wasm  test.cpp  wasm_loader.js
shaders/: .frag  .vert
src/base/: base.cpp  base.h  camera.cpp  camera.h  instance.cpp  instance.h
src/game/: Game.cpp  Game.h  map.cpp  map.h  snake.cpp  snake.h
